# mood-radio-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
assets/: README.md
docs/: deployment.md  mac-mini-deployment.md  playmcp-submission.md
mood_radio_mcp/: __init__.py  models.py  moods.py  repository.py  safety.py  server.py  tools.py
scripts/: build_release_bundle.py  preflight_endpoint.py  reviewer_demo.py  smoke_http.py  submission_audit.py
tests/: test_build_release_bundle.py  test_http_routes.py  test_mcp_server.py  test_preflight_endpoint.py  test_repository.py  test_reviewer_demo.py  test_submission_audit.py  test_tools.py
